--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require-dev": {
-    "satooshi/php-coveralls": "dev-master"
+    "satooshi/php-coveralls": "dev-master",
+    "atoum/atoum": "dev-master"
     }
 }
