--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
 
 
 after_script:
+  - php vendor/bin/coveralls -v
   - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml    
     
 
